# Financial-Signals-Data-Science

./: .gitignore  METHODOLOGY.md  README.md  makefile  pyproject.toml  requirements.txt
.github/workflows/: daily_ingest.yml
analysis/: causality.py  eda.py
dashboard/: app.py
data/quality_report/: benchmarking_report.html  insight_report.html  report.html  var_summary.txt
features/: macro_merge.py  regime.py  technical.py
ingestion/: cleaner.py  loader.py  macro.py  market.py  quality_report.py
models/: anomaly.py  evaluate.py  explain.py  lgbm_model.py  regime_model.py  train.py  xgboost_model.py
reports/: insight_report.py
tests/: test_features.py
time_series/: arima.py  decomposition.py  garch.py  prophet_macro.py  stationarity.py  var_model.py
