[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "finsignal"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "polars>=0.20",
    "duckdb>=0.10",
    "yfinance>=0.2",
    "fredapi>=0.5",
    "python-dotenv>=1.0",
    "statsmodels>=0.14",
    "arch>=6.3",
    "prophet>=1.1",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "shap>=0.45",
    "optuna>=3.6",
    "plotly>=5.20",
    "streamlit>=1.35",
    "jinja2>=3.1",
    "pytest>=8.0",
    "scipy>=1.13",
]

[tool.setuptools.packages.find]
where = ["."]